--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script scr="https://kit.fontawesome.com/3da1a747b2.js"></script>
     <title>Apex Stat Tracker</title>
   </head>
   <body>
